--- a/.github/workflows/firebase-firestore-update.yml
+++ b/.github/workflows/firebase-firestore-update.yml
@@ -1,6 +1,6 @@
 # automatic builds when firestore is updated
 
-name: Deploy to Firebase Hosting on Firestore update
+name: Deploy to Firebase Hosting on Firestore update and dispatch
 'on':
   workflow_dispatch:  # Added for manual triggering
 
